
2021-11-22  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_allocate_identifier, cb_emit_allocate_characters),
	  tree.h, parser.y: split and document (cb_emit_allocate)

2021-11-18  Ron Norman <rjn@inglenet.com>

	* field.c: More work for OCCURS with multiple VALUES
	* codegen.c: More work for initialize of OCCURS with multiple VALUES

2021-11-15  Ron Norman <rjn@inglenet.com>

	FR #234: multiple VALUEs for OCCURS
	* field.c (validate_elem_value): Accept multi VALUES for simple OCCURS
	* tree.h: Add flag_occurs_values to cb_field
	* codegen.c: Handle initialize of OCCURS with multiple VALUES

2021-11-14  Ron Norman <rjn@inglenet.com>

	Implement FR 235: add bitwise operators for numeric items
	* reserved.c: Add bit-wise words B-AND, B-NOT, B-OR, B-SHIFT-L, B-SHIFT-R,
	  B-XOR, B-SHIFT-LC, B-SHIFT-RC
	* parser.y: Add grammar for handling bitwise operations
	* typeck.c, tree.c: Add checks for handling the bitwise operations
	* codegen.c: Add code emission for the bitwise operations

2021-11-05  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (compute_size): adjusted check to correctly catch items bigger
	  than 2 GB
	* tree.c (get_pic_number_from_str) [COB_64_BIT_POINTER]: allow up to
	  10 significant digits
	* tree.c (cb_build_picture): check for value <= INT_MAX

2021-10-23  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line) [__TINYC__, __OS400__): early exit when
	  assembling is requested, for the testsuite with a "skip" status
	* cobc.c: removed unused aflag_set, renamed gflag_set to source_debugging
	* cobc.c (process) [__OS400__]: simplified source-debugging handling

2021-10-19  Simon Sobisch <simonsobisch@gnu.org>

	* config.def (larger-redefines): changed to support option from boolean
	  larger-redefines-ok
	* warning.def (cb_warn_larger_01_redefines): new warning for possibly
	  problematic but allowed level 01 non-external REDEFINE
	* field.c (compute_size): cater for cb_larger_redefines and